# USACO_Prep

./: CMakeLists.txt  README.md  main.cpp
problem_1/: problem_1.cpp  problem_1.h
problem_10/: problem_10.cpp  problem_10.h
problem_11/: problem_11.cpp  problem_11.h
problem_2/: problem_2.cpp  problem_2.h
problem_3/: problem_3.cpp  problem_3.h
problem_4/: problem_4.cpp  problem_4.h
problem_5/: problem_5.cpp  problem_5.h
problem_6/: problem_6.cpp  problem_6.h
problem_7/: problem_7.cpp  problem_7.h  problem_7_simpler_solution.cpp  problem_7_simpler_solution.h
problem_8/: problem_8.cpp  problem_8.h
problem_9/: problem_9.cpp  problem_9.h
